[package]
name = "bard-client"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
description = "Built as wasm application with yew."
repository = "https://github.com/msyfls123/bard"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
js-sys = "0.3.47"
serde_json = "1.0.78"
wasm-bindgen-futures = "0.4.29"
yew-router = "0.18.0"
serde = "1.0.136"
serde-wasm-bindgen = "0.6.5"
chrono = { version = "0.4.37", features = ["wasmbind", "js-sys"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'FocusEvent',
  'EventTarget',
  'HtmlElement',
  'HtmlFormElement',
  'HtmlInputElement',
  'HtmlCollection',
  'Element',
]

[dependencies.wasm-bindgen]
version = "0.2.80"
features = [
    'serde-serialize',
]

[dependencies.yew]
version = "0.21.0"
features = [
  'csr'
]
