[package]
name = "bard-server"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
description = "Built as binary application with Rocket."
repository = "https://github.com/msyfls123/bard"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
indradb-lib = { version = "3", features = ["rocksdb-datastore"] }
serde_json = "1.0.75"
handlebars = "3.5.5"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]
