[package]
name = "bard-server"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
description = "Built as binary application with Rocket."
repository = "https://github.com/msyfls123/bard"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
indradb-lib = { version = "3", features = ["rocksdb-datastore"] }
serde_json = "1.0.75"
handlebars = "3.5.5"
serde = "1.0.135"
juniper_rocket = "0.8.0"
juniper = "0.15.8"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "uuid"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.rocket_auth]
version = "0.4.0"
features = ["rusqlite"]
