[package]
name = "bard-server"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
description = "Built as binary application with Rocket."
repository = "https://github.com/msyfls123/bard"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
indradb-lib = { version = "3.0.3", features = ["rocksdb-datastore"] }
serde_json = "1.0.75"
handlebars = "4.2.2"
serde = "1.0.135"
juniper_rocket = { git = "https://github.com/graphql-rust/juniper.git", rev = "ac6e609" }
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev = "ac6e609" }

[dependencies.rocket]
version = "0.5"
features = ["json", "uuid"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.4"
features = ["handlebars"]

[dependencies.rocket_auth]
git = "https://github.com/msyfls123/rocket_auth.git"
branch = "fix/outcome"
features = ["rusqlite"]
